tests/negative/NotARecord.juvix
module NotARecord;

type T := t;

f : T;
f := t @T{x := 1};
